[ADD] new background [FIX] menu is vertically stacked on small screens

--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -111,14 +111,22 @@ header {
 nav ul {
 	white-space:nowrap;
 	margin-right: 25px;
-	text-align: right;
 	list-style-type:none;
 	padding:0;
 }
 
-nav ul li {
-	display: inline;
-	padding: 3px 15px;
+@media(min-width:767px){
+	nav ul li {
+		display: inline;
+		padding: 3px 15px;
+		text-align: right;
+	}
+}
+
+@media(max-width:767px){
+	nav ul {
+		margin: 20px 0px;
+	}
 }
 
 nav ul li a {
